--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
 
     <repositories>
         <repository>
+            <id>jitpack</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
@@ -124,6 +128,13 @@
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
             <version>2.11.6</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- AbstractMenus API -->
+        <dependency>
+            <groupId>com.github.AbstractMenus</groupId>
+            <artifactId>api</artifactId>
+            <version>1.16</version>
             <scope>provided</scope>
         </dependency>
         <!-- Adventure API -->
